--- a/Windows/NbfcClient/packages.config
+++ b/Windows/NbfcClient/packages.config
@@ -5,5 +5,8 @@
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net45" />
+  <package id="NHotkey" version="1.2.1" targetFramework="net45" />
+  <package id="NHotkey.Wpf" version="1.2.1" targetFramework="net45" />
   <package id="NLog" version="4.5.10" targetFramework="net45" />
+  <package id="Notifications.Wpf" version="0.1.1" targetFramework="net45" />
 </packages>
