Completing bootstrapper for new UI

--- a/Core/NbfcService/NbfcService.csproj
+++ b/Core/NbfcService/NbfcService.csproj
@@ -104,6 +104,9 @@
     <None Include="App.manifest" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
     <ItemGroup>
