--- a/Windows/NbfcClient/packages.config
+++ b/Windows/NbfcClient/packages.config
@@ -8,5 +8,5 @@
   <package id="NHotkey" version="1.2.1" targetFramework="net45" />
   <package id="NHotkey.Wpf" version="1.2.1" targetFramework="net45" />
   <package id="NLog" version="4.5.10" targetFramework="net45" />
-  <package id="Notifications.Wpf" version="0.1.1" targetFramework="net45" />
+  <package id="Notifications.Wpf.Sarav" version="0.1.0" targetFramework="net45" />
 </packages>
