Attempting to measure GPU temperature

--- a/Windows/NbfcClient/NbfcClient.csproj
+++ b/Windows/NbfcClient/NbfcClient.csproj
@@ -63,6 +63,15 @@
   <PropertyGroup>
     <ApplicationManifest>App.manifest</ApplicationManifest>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>powershellcert.pfx</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignManifests>false</SignManifests>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommonServiceLocator, Version=2.0.4.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
       <HintPath>..\..\packages\CommonServiceLocator.2.0.4\lib\net45\CommonServiceLocator.dll</HintPath>
@@ -99,8 +108,8 @@
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\..\packages\NLog.4.5.10\lib\net45\NLog.dll</HintPath>
     </Reference>
-    <Reference Include="Notifications.Wpf, Version=0.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Notifications.Wpf.0.1.1\lib\net45\Notifications.Wpf.dll</HintPath>
+    <Reference Include="Notifications.Wpf.Sarav, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Notifications.Wpf.Sarav.0.1.0\lib\net45\Notifications.Wpf.Sarav.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -242,8 +251,10 @@
     <None Include="App.manifest">
       <SubType>Designer</SubType>
     </None>
+    <None Include="nbfc_certificate.pfx" />
     <None Include="packages.config" />
     <AppDesigner Include="Properties\" />
+    <None Include="powershellcert.pfx" />
     <None Include="Service References\NbfcService\Arrays.xsd">
       <SubType>Designer</SubType>
     </None>
